--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'io.github.leeseojune53'
-version = '1.0.1'
+version = '1.0.2'
 sourceCompatibility = JavaVersion.VERSION_11
 
 repositories {
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.14'
+    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5-cache', version: '5.1'
 }
 
 test {
