⚡ :: ci.yml add sudo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: codecov gradle
         run: ./gradlew jacocoTestReport
       - name: move directory
-        run: mv /lib/build /build
+        run: sudo mv /lib/build /build
       - name: codecov upload
         run: bash <(curl -s https://codecov.io/bash)
         env:
