--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,10 @@ jobs:
         run: ./gradlew check
       - name: codecov gradle
         run: ./gradlew jacocoTestReport
+      - name: show directory
+        run: ls
       - name: move directory
-        run: sudo mv /lib/build /build
+        run: sudo mv ./lib/build ./build
       - name: codecov upload
         run: bash <(curl -s https://codecov.io/bash)
         env:
