--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,7 +1,12 @@
+buildscript {
+    ext.spockVersion = "1.3-groovy-2.5"
+}
+
 plugins {
     id 'java'
     id 'maven-publish'
     id 'signing'
+    id 'groovy'
     id 'jacoco'
 }
 
@@ -9,11 +14,24 @@ group = 'io.github.leeseojune53'
 version = '1.0.3'
 sourceCompatibility = JavaVersion.VERSION_11
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    testImplementation platform("org.spockframework:spock-bom:2.0-groovy-3.0")
+    testImplementation "org.spockframework:spock-core"
+    testImplementation "org.spockframework:spock-junit4"
+}
+
+test {
+    useJUnitPlatform()
 }
 
 task javadocJar(type: Jar) {
@@ -86,10 +104,6 @@ publishing {
 signing {
     useGpgCmd()
     sign(publishing.publications)
-}
-
-test {
-    useJUnitPlatform()
 }
 
 jacocoTestReport {
